# s_genai

./: .dockerignore  .gitignore  Dockerfile  README.md  main_root_backup.py  pyproject.toml  requirements.txt  sample_images.py  train_cnn.py  train_diffusion_main.py  train_energy_main.py  train_gan_mnist.py
app/: llm_wrapper.py  main.py  rl_env.py  rl_policy.py  schemas.py
app/scripts/: train_rl.py
artifacts/: model.pt
artifacts_energy/: energy_ep001.pt  energy_ep002.pt
artifacts_gan/: D.pt  G.pt
helper_lib/: data_loader.py  evaluator.py  generator.py  model.py  trainer.py  utils.py
